--- a/fm.ipynb
+++ b/fm.ipynb
@@ -735,27 +735,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"ca_predictor\", \"wb\") as f:\n",
-    "    pickle.dump(lr, f)"
+    "from joblib import dump, load\n",
+    "\n",
+    "dump(lr, \"ca_predictor.joblib\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"ca_predictor\", \"rb\") as f:\n",
-    "    lr_model = pickle.load(f)"
+    "lr_model = load(\"ca_predictor.joblib\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "0.914455328098405"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,6 +862,53 @@
    ],
    "source": [
     "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9, 12, 13, 12, 13, 12, 15, 11,  5, 11, 12, 14,  7, 13,  5, 12, 10,\n",
+       "       10, 10, 12, 11, 12, 13, 12, 12, 12, 13, 10, 14, 12, 15, 12, 15, 13,\n",
+       "       13,  9, 20, 15, 11,  3,  1,  1,  1,  1,  1,  1,  3,  4,  3,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1, 14, 20, 11, 20],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'joblib' from 'sklearn.externals' (c:\\ProgramData\\miniconda3\\Lib\\site-packages\\sklearn\\externals\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[62], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexternals\u001b[39;00m \u001b[39mimport\u001b[39;00m joblib\n\u001b[0;32m      3\u001b[0m joblib\u001b[39m.\u001b[39mdump(lr, \u001b[39m\"\u001b[39m\u001b[39mca_predictor.joblib\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'joblib' from 'sklearn.externals' (c:\\ProgramData\\miniconda3\\Lib\\site-packages\\sklearn\\externals\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.externals import \n",
+    "\n",
+    "joblib.dump(lr, \"ca_predictor.joblib\")"
    ]
   },
   {
